--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@mdx-js/esbuild": "^3.0.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.4",
+    "@next/mdx": "^14.2.5",
     "@types/mdx": "^2.0.13",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "uninstall": "^0.0.0"
