--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-mdx-code-props": "^3.0.1",
     "rehype-react": "^8.0.0",
+    "rehype-starry-night": "^2.1.0",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
